# homework-python-opp

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  cli.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py  test.sh
api/: routes.py
cli/: main.py
cli/commands/: export_cmd.py  factorial_cmd.py  fibonacci_cmd.py  pow_cmd.py  status_cmd.py
models/: request_models.py  response_models.py
services/: auth.py  background_tasks.py  math_ops.py
storage/: memory_store.py  sqlite_store.py  task_status.py  task_store.py
templates/: history.html  index.html  login.html  tasks.html
tests/: test_api.py  test_cli.py  test_math_ops.py
